--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -82,6 +82,14 @@ body {
   padding: 0;
 }
 
+.ml-15 {
+  margin-left: 15px !important;
+}
+
+.mr-15 {
+  margin-right: 15px !important;
+}
+
 .btn.btn-icon-only {
   padding: 16px 17px;
   background-color: #f8f8f8;
