--- a/app/views/fireteam/player.html
+++ b/app/views/fireteam/player.html
@@ -18,7 +18,7 @@
        target="_blank"
        type="button"
        analytics-on analytics-event="Click" analytics-category="DestinyTracker"
-       data-intro="Trials stats on DestinyTracker" data-position="right">
+       data-intro="Links to <strong>DestinyTracker</strong> for more detailed statistics based on all characters and maps" data-position="bottom">
        View DestinyTracker Stats
      </a>
   </div>
