remove api definitions and add static file

--- a/app/views/fireteam/maps.html
+++ b/app/views/fireteam/maps.html
@@ -13,7 +13,7 @@
       </thead>
       <tbody>
       <tr ng-repeat="(key, value) in player.mapStats">
-        <td>{{key}}</td>
+        <td>{{DestinyTrialsDefinitions[key].activityName}}</td>
         <td>{{value.kills}}</td>
         <td>{{value.deaths}}</td>
         <td>{{value.assists}}</td>
