shorten button label for mobile

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -10,7 +10,7 @@
         </div>
         <div class="col-md-6 col-xs-6 pl-0 pr-0">
           <button class="btn btn-block btn-default" type="button" ng-click="suggestRecentPlayers()"
-                  analytics-on analytics-event="Click" analytics-category="Suggest Recent Players">Suggest Recent Players</button>
+                  analytics-on analytics-event="Click" analytics-category="Suggest Recent Players">Suggest Recent<span class="hidden-xs"> Players</span></button>
         </div>
       </div>
       <div class="row" ng-hide="$index === 0">
