adding timestamp to the partials

--- a/app/views/fireteam/player.html
+++ b/app/views/fireteam/player.html
@@ -1,8 +1,8 @@
-<ng-include src="'views/fireteam/info.html'"></ng-include>
+<ng-include src="infoPartial"></ng-include>
 
 <tabset class="tabs-dark col-md-12 col-xs-12 p-0 mb-10" justified="true">
   <tab heading="Equipped">
-    <ng-include src="'views/fireteam/stats.html'"></ng-include>
+    <ng-include src="statsPartial"></ng-include>
     <ng-include src="'views/fireteam/weapons.html'"></ng-include>
     <ng-include src="'views/fireteam/armor.html'"></ng-include>
   </tab>
