--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,4 +1,4 @@
-<ng-include src="'views/shared/header.html'"></ng-include>
+<ng-include src="headerPartial"></ng-include>
 
 <div class="container" ng-hide="status">
   <div class="row">
@@ -75,7 +75,7 @@
 
       <section class="tile tile-simple">
         <div class="tile-body p-0">
-          <ng-include src="'views/fireteam/player.html'"></ng-include>
+          <ng-include src="playerPartial"></ng-include>
         </div>
       </section>
     </div>
