add popovers for hazards

--- a/app/views/fireteam/weapons.html
+++ b/app/views/fireteam/weapons.html
@@ -18,7 +18,7 @@
           </a>
         </div>
         <div class="col-xs-10">
-          <span class="text-left text-sm">{{node.name}}</span>
+          <span class="text-left text-sm" ng-bind="node.name"></span>
         </div>
       </div>
     </div>
