--- a/app/views/fireteam/info.html
+++ b/app/views/fireteam/info.html
@@ -2,15 +2,15 @@
   <div class="card mb-0" style="background-image: url('{{player.emblem}}'), url('{{player.background[0]}}'); background-repeat: no-repeat, no-repeat; background-position: left, right; background-size: 65px 65px, 100% 65px; height: 65px;">
     <div class="front p-0" data-intro="Trials <strong>k/d</strong> and <strong>win %</strong> for this <strong>character</strong><br/>Flawless based on account lifetime, <strong>not</strong> weekly stat" data-position="right" data-class="green">
       <p class="large mb-0">
-        <span>{{player.name}}</span>
+        <span ng-bind="player.name"></span>
         <span ng-show="player.stats.killsDeathsRatio" class="right pr-10">
-          <span class="hidden-xs">K/D: </span>
+          <span class="hidden-xs">K/D:</span>
           <span ng-bind="player.stats.killsDeathsRatio.basic.displayValue"></span>
         </span>
       </p>
       <p class="mb-0">
         <span ng-show="player.level && player.class.name">
-          <span class="hidden-xs">Level </span>
+          <span class="hidden-xs">Level</span>
           <span ng-bind="player.level"></span>
           <span ng-bind="player.class.name"></span>
         </span>
