--- a/app/views/fireteam/player.html
+++ b/app/views/fireteam/player.html
@@ -15,7 +15,7 @@
 </tabset>
 
 <div class="row">
-  <div class="col-sm-12 hidden-xs">
+  <div class="col-xs-12 hidden-xs hidden-sm">
     <a class="btn btn-block btn-default bg-info dker"
        href="http://destinytracker.com/destiny/trials/{{player.membershipType === 2 ? 'ps' : 'xbox'}}/{{player.name}}"
        target="_blank"
