--- a/app/views/main.html
+++ b/app/views/main.html
@@ -56,8 +56,7 @@
                 ng-repeat="hazard in player.weapons.hazards.concat(player.armors.hazards, player.classNodes.hazards) track by $index"
                 ng-bind="hazard"
                 popover="{{DestinyHazardDefinition[hazard]}}"
-                popover-trigger="mouseenter"
-                popover-placement="top">
+                popover-trigger="mouseenter">
           </span>
         </div>
       </div>
@@ -86,8 +85,7 @@
                 ng-repeat="hazard in player.weapons.hazards.concat(player.armors.hazards, player.classNodes.hazards) track by $index"
                 ng-bind="hazard"
                 popover="{{DestinyHazardDefinition[hazard]}}"
-                popover-trigger="mouseenter"
-                popover-placement="top">
+                popover-trigger="mouseenter">
           </span>
         </div>
       </div>
