add margin between win/loss record and weapons

--- a/app/views/fireteam/info.html
+++ b/app/views/fireteam/info.html
@@ -22,7 +22,7 @@
       <div class="mb-0 mr-0 ml-0 row">
         <div class="col-md-6 col-md-offset-6 col-xs-6 col-xs-offset-6 text-right pr-0">
           <span class="right text-white pr-10" ng-show="player.lighthouse === false && !player.neverTrials">Never Flawless</span>
-          <span class="text-white pr-10" ng-show="player.lighthouse === true">Flawless</span>
+          <span class="right text-white pr-10" ng-show="player.lighthouse === true">Flawless</span>
           <p class="text-center mb-0 pr-10" ng-show="player.neverTrials">No previous trials games</p>
         </div>
       </div>
