--- a/app/views/fireteam/stats.html
+++ b/app/views/fireteam/stats.html
@@ -20,8 +20,8 @@
   </div>
 </div>
 
-<div class="row ml-0 mr-0" data-intro="Match win/loss history<br/><em>hover over the icons for details</em>" data-position="right" data-class="red">
-  <div class="col-md-12 col-xs-12 pr-0 pl-0 text-center">
+<div class="row ml-0 mr-0 mb-10" data-intro="Match win/loss history<br/><em>hover over the icons for details</em>" data-position="right" data-class="red">
+  <div class="col-xs-12 pr-0 pl-0 text-center">
     <i class="fa fa-circle mr-3 {{$index < 7 ? (player.pastActivities.length - $index ) > 18 ? 'hidden-xs' : '' : ''}}"
        ng-repeat="str in player.pastActivities track by $index"
        ng-class="str.standing === 0 ? 'win' : 'lose'"
