--- a/app/views/main.html
+++ b/app/views/main.html
@@ -18,7 +18,7 @@
                     ng-click="suggestRecentPlayers()"
                     analytics-on analytics-event="Click"
                     analytics-category="Suggest Recent Players">
-                    Suggest Recent<span class="hidden-md"> Players</span>
+                    Suggest <span class="hidden-xs hidden-md">Recent </span>Players
             </button>
           </div>
         </div>
