--- a/app/views/fireteam/player.html
+++ b/app/views/fireteam/player.html
@@ -2,7 +2,7 @@
 
 <tabset class="tabs-dark col-xs-12 p-0 mb-10" justified="true">
   <tab heading="Equipped">
-    <ng-include src="statsPartial"></ng-include>
+    <ng-include src="statPartial"></ng-include>
     <ng-include src="'views/fireteam/weapons.html'"></ng-include>
     <ng-include src="'views/fireteam/armor.html'"></ng-include>
   </tab>
