--- a/app/views/fireteam/weapons.html
+++ b/app/views/fireteam/weapons.html
@@ -10,7 +10,7 @@
       </div>
     </div>
     <div class="col-xs-8 pt-10">
-      <div ng-if="!($first || $last)" style="width:224px; height:105px; position:absolute; z-index:-1" data-intro="Unlocked and active weapon perks <br/><em>hover over the icons for the desciption</em>" data-position="right" data-class="blue"></div>
+      <div ng-if="!fireteam[0].name && !($first || $last)" class="hidden-xs hidden-sm" style="width:224px; height:105px; position:absolute; z-index:-1" data-intro="Unlocked and active weapon perks <br/><em>hover over the icons for the desciption</em>" data-position="right" data-class="blue"></div>
       <div class="row" ng-repeat="node in weapon.nodes" ng-show="node.name">
         <div class="col-xs-2">
           <a class="icon icon-default" style="margin:0px; width:22px; height:22px" popover="{{node.description}}" popover-trigger="mouseenter">
