--- a/app/views/fireteam/info.html
+++ b/app/views/fireteam/info.html
@@ -20,7 +20,7 @@
         </span>
       </p>
       <div class="mb-0 mr-0 ml-0 row">
-        <div class="col-md-6 col-md-offset-6 col-xs-6 col-xs-offset-6 text-right pr-0">
+        <div class="col-xs-6 col-xs-offset-6 text-right pr-0">
           <span class="right text-white pr-10" ng-show="player.lighthouse === false && !player.neverTrials">Never Flawless</span>
           <span class="right text-white pr-10" ng-show="player.lighthouse === true">Flawless</span>
           <p class="text-center mb-0 pr-10" ng-show="player.neverTrials">No previous trials games</p>
@@ -28,8 +28,8 @@
       </div>
     </div>
     <div class="back">
-      <div class="col-md-12 col-xs-12">
-        <div class="col-md-6 col-xs-6" ng-repeat="classNode in player.classNodes">
+      <div class="col-xs-12">
+        <div class="col-xs-6" ng-repeat="classNode in player.classNodes">
           <a class="icon icon-white m-0" style="margin-top:4px!important; margin-right:5px!important; width:25px; height:25px"
              popover="{{classNode.description}}"
              popover-trigger="mouseenter">
