--- a/app/views/main.html
+++ b/app/views/main.html
@@ -25,7 +25,7 @@
       </div>
       <div class="row" ng-hide="$index === 0">
         <div class="col-xs-12">
-          <form class="form-horizontal" role="form" ng-submit="searchPlayerbyName(teammateName, platformValue, $index)">
+          <form class="form-horizontal" role="form" ng-submit="searchPlayerbyName(teammateName, platformValue, $index, true)">
             <div class="input-group">
               <div ng-show="recentPlayers" class="input-group-btn">
                 <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenuMobile{{($index)}}" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
