--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,24 +2,35 @@
 
 <div class="container" ng-hide="status">
   <div class="row">
-    <div class="col-xs-12 col-md-4" ng-if="fireteam[0].name" ng-repeat="player in fireteam track by $index">
+    <div help-overlay="helpOverlay" class="col-xs-12 col-md-4 {{player.isDeej ? 'col-md-offset-4' : ''}}" ng-if="fireteam[0].name" ng-repeat="player in fireteam track by $index">
       <div class="row ml-0 mr-0" ng-show="$index === 0">
         <div class="btn-group btn-group-justified">
           <div class="btn-group">
             <button class="btn btn-success" type="button"
                     ng-click="refreshInventory()"
                     analytics-on analytics-event="Click"
-                    analytics-category="Refresh Inventory">
+                    analytics-category="Refresh Inventory"
+                    data-intro="Refreshes inventory for all players<br/><em>(weapons, armor, class)</em>"
+                    data-position="left">
                     Refresh Inventory
             </button>
           </div>
           <div class="btn-group">
-            <button class="btn btn-default" type="button"
+            <button ng-hide="player.isDeej" class="btn btn-default" type="button"
                     ng-click="suggestRecentPlayers()"
                     analytics-on analytics-event="Click"
                     analytics-category="Suggest Recent Players">
                     Suggest <span class="hidden-xs hidden-md">Recent </span>Players
             </button>
+            <button ng-show="player.isDeej" class="btn btn-default" type="button"
+                    popover="This button populates suggested fireteam members based on past trials history. Best for use in case our generated fireteam doesnt
+                             match up with the game, there is no way to look at current fireteams so we are pulling data from the previous played game."
+                    popover-placement="bottom"
+                    analytics-on analytics-event="Click"
+                    analytics-category="(Tutorial) Suggest Recent">
+                    Suggest <span class="hidden-xs hidden-md">Recent </span>Players
+            </button>
+
           </div>
         </div>
       </div>
@@ -60,39 +71,9 @@
           </span>
         </div>
       </div>
-
       <section class="tile tile-simple">
         <div class="tile-body p-0">
           <ng-include src="'views/fireteam/player.html'"></ng-include>
-        </div>
-      </section>
-    </div>
-
-    <div ng-if="!fireteam[0].name" help-overlay="helpOverlay" class="col-xs-12 col-md-4 col-md-offset-4 hidden-xs hidden-sm" ng-repeat="player in [dummyFireteam] track by $index">
-      <div class="row">
-        <div ng-show="$index === 0" class="col-xs-12"
-             popover="This button populates suggested fireteam members based on past trials history. Best for use in case our generated fireteam doesnt
-             match up with the game, there is no way to look at current fireteams so we are pulling data from the previous played game."
-             popover-placement="bottom">
-          <button class="btn btn-block btn-default" type="button">Suggest Recent Players</button>
-        </div>
-      </div>
-
-      <div class="row" style="height:18px">
-        <div class="col-xs-12 p-0 ml-15" data-intro="Useful hazards about the player" data-position="left" data-class="red">
-          <span class="label bg-danger"
-                style="margin-right:2px"
-                ng-repeat="hazard in player.weapons.hazards.concat(player.armors.hazards, player.classNodes.hazards) track by $index"
-                ng-bind="hazard"
-                popover="{{DestinyHazardDefinition[hazard]}}"
-                popover-trigger="mouseenter">
-          </span>
-        </div>
-      </div>
-
-      <section class="tile tile-simple">
-        <div class="tile-body p-0">
-          <ng-include src="playerPartial"></ng-include>
         </div>
       </section>
     </div>
