temp fix for tutorial

--- a/app/views/fireteam/player.html
+++ b/app/views/fireteam/player.html
@@ -21,7 +21,7 @@
        target="_blank"
        type="button"
        analytics-on analytics-event="Click" analytics-category="DestinyTracker"
-       data-intro="Links to <strong>DestinyTracker</strong> for more detailed statistics based on all characters and maps" data-position="bottom">
+       data-intro="Links to <strong>DestinyTracker</strong> for more detailed statistics based on all characters and maps" data-position="right">
        View DestinyTracker Stats
      </a>
   </div>
