--- a/app/views/main.html
+++ b/app/views/main.html
@@ -4,10 +4,11 @@
   <div class="row">
     <div ng-if="fireteam[0].isDeej" id="alertsPlaceholder">
       <alert type="warning" close="closeAlert($index)" class="closeable text-center">
-        <i class="fa fa-warning"></i><br/>
-        Sorry about any issues in the past hour, we've been trying to push an update with new features and fixes and ran into...complications.
+        Sorry about any issues in the past hour, we've been trying to push an update with new features/fixes and ran into...complications.
         <br/>
-        Everything should be good now but if you're still having issues try refreshing the browser with cmd+shift+r or open the site in incognito mode.
+        Everything should be good now and you might experience slower load times for a short period.
+        <br/>
+        If you're still having issues try refreshing the browser with cmd+shift+r or open the site in incognito mode
         <br/>
         If you encounter a bug please let us know on our github or message me on reddit, username: FartSausage
       </alert>
