--- a/app/views/main.html
+++ b/app/views/main.html
@@ -3,7 +3,7 @@
 <div class="container" ng-hide="status">
   <div class="row">
     <div ng-if="fireteam[0].isDeej" id="alertsPlaceholder">
-      <alert type="warning" close="closeAlert($index)" class="closeable text-center">
+      <alert type="warning" class="notcloseable text-center">
         Sorry about any issues in the past hour, we've been trying to push an update with new features/fixes and ran into...complications.
         <br/>
         Everything should be good now and you might experience slower load times for a short period.
