fix weapons/armor magically dissappearing

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -229,21 +229,21 @@ tr.thin {
   }
 }
 
-.card .back {
+.emblem .card .back {
   opacity: 0;
 }
-.card .back,
-.card .front {
+.emblem .card .back,
+.emblem .card .front {
   transition: opacity 1s !important;
   -o-transition: opacity 1s !important;
   -ms-transition: opacity 1s !important;
   -moz-transition: opacity 1s !important;
   -webkit-transition: opacity 1s !important;
 }
-.card:hover .front {
+.emblem .card:hover .front {
   opacity: 0;
 }
-.card:hover .back {
+.emblem .card:hover .back {
   opacity: 1;
 }
 
